Bug 1392837 - Support multichannel audio input on gUM. r=padenot

MozReview-Commit-ID: FKCIAo4a8jy